--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "task-manager-api",
   "version": "1.0.0",
   "main": "src/index.js",
-"scripts": {
-  "dev": "nodemon src/index.js",
-  "start": "node src/index.js",
-  "postinstall": "npx prisma generate"
-},
+  "scripts": {
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "postinstall": "npx prisma generate"
+  },
   "dependencies": {
     "@prisma/client": "^5.15.0",
     "bcryptjs": "^2.4.3",
@@ -14,7 +14,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
